; ModuleID = '/home/carl/AnghaBench/systemd/src/network/tc/extr_tc-util.c_tc_time_to_tick.c'
source_filename = "/home/carl/AnghaBench/systemd/src/network/tc/extr_tc-util.c_tc_time_to_tick.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@tc_time_to_tick.ticks_in_usec = internal global double -1.000000e+00, align 8
@UINT32_MAX = common dso_local global double 0.000000e+00, align 8
@ERANGE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @tc_time_to_tick(double %0, double* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca double, align 8
  %5 = alloca double*, align 8
  %6 = alloca double, align 8
  %7 = alloca i32, align 4
  store double %0, double* %4, align 8
  store double* %1, double** %5, align 8
  %8 = load double*, double** %5, align 8
  %9 = call i32 @assert(double* %8)
  %10 = load double, double* @tc_time_to_tick.ticks_in_usec, align 8
  %11 = fcmp olt double %10, 0.000000e+00
  br i1 %11, label %12, label %19

12:                                               ; preds = %2
  %13 = call i32 @tc_init(double* @tc_time_to_tick.ticks_in_usec)
  store i32 %13, i32* %7, align 4
  %14 = load i32, i32* %7, align 4
  %15 = icmp slt i32 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %12
  %17 = load i32, i32* %7, align 4
  store i32 %17, i32* %3, align 4
  br label %32

18:                                               ; preds = %12
  br label %19

19:                                               ; preds = %18, %2
  %20 = load double, double* %4, align 8
  %21 = load double, double* @tc_time_to_tick.ticks_in_usec, align 8
  %22 = fmul double %20, %21
  store double %22, double* %6, align 8
  %23 = load double, double* %6, align 8
  %24 = load double, double* @UINT32_MAX, align 8
  %25 = fcmp ogt double %23, %24
  br i1 %25, label %26, label %29

26:                                               ; preds = %19
  %27 = load i32, i32* @ERANGE, align 4
  %28 = sub nsw i32 0, %27
  store i32 %28, i32* %3, align 4
  br label %32

29:                                               ; preds = %19
  %30 = load double, double* %6, align 8
  %31 = load double*, double** %5, align 8
  store double %30, double* %31, align 8
  store i32 0, i32* %3, align 4
  br label %32

32:                                               ; preds = %29, %26, %16
  %33 = load i32, i32* %3, align 4
  ret i32 %33
}

declare dso_local i32 @assert(double*) #1

declare dso_local i32 @tc_init(double*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
